--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav Bahnschrift-font-family">
                     <li class="nav-item">
-                        <a class="nav-link text-color" href="./news.html">News</a>
+                        <a class="nav-link text-color" href="./News.html">News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-color" href="dessert.html">Dessert</a>
